--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@ p{color:#434343;line-height:1.6;}
 <div class="card" style="margin-top:10px;">
 </div>
 <div class="card" style="margin-top:16px;">
-<h2 class="section-title">PERSONAL INFORMATION</h2>
-<label class="small field-label">please enter your name</label>
+<h2 class="section-title">YOUR INFORMATION</h2>
+<label class="small field-label">your name</label>
 <input id="sarNick" placeholder="nick name" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 12px;" type="text"/>
-<label class="small field-label">your email address</label>
+<label class="small field-label">your email </label>
 <input id="sarEmail" placeholder="email address" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 12px;" type="email"/>
-<label class="small field-label">select your location</label>
+<label class="small field-label">your location</label>
 <select id="sarHotel" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 4px;">
 <option value="">select hotel</option>
 <option>BED Changkian</option>
@@ -259,12 +259,12 @@ p{color:#434343;line-height:1.6;}
 </select>
 </div>
 <div class="card" style="margin-top:16px;">
-<h2 class="section-title">PEER INFORMATION</h2><div class="peer-subtext" style="font-size:11pt;color:#666;margin-top:4px;margin-bottom:12px;">the person that will review you must have been in BED for at least 12 months</div>
-<label class="small field-label">name of your peer reviewer</label>
+<h2 class="section-title">PEER INFORMATION</h2><div class="peer-subtext" style="font-size:11pt;color:#666;margin-top:4px;margin-bottom:12px;">this person must be in BED for a minimum of 12 months</div>
+<label class="small field-label">name peer reviewer</label>
 <input id="peerName" placeholder="nick name" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 12px;" type="text"/>
-<label class="small field-label">email address of your peer reviewer</label>
+<label class="small field-label">email peer reviewer</label>
 <input id="peerEmail" placeholder="email address" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 12px;" type="email"/>
-<label class="small field-label">select peer location</label>
+<label class="small field-label">peer location</label>
 <select id="peerHotel" style="width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;margin:6px 0 4px;">
 <option value="">select hotel</option>
 <option>BED Changkian</option>
@@ -280,14 +280,14 @@ p{color:#434343;line-height:1.6;}
 </div>
 </div><div class="sar-page" data-step="intro">
 <div class="card" style="margin-top:10px;">
-<h2 class="section-title">INSTRUCTIONS FOR ASSESSMENT</h2>
+<h2 class="section-title">HOW THIS WORKS</h2>
 <div class="field-label" style="margin-top:6px;">
     Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself.
     The goal is to know your own strengths and opportunities.
   </div>
 </div>
 <div class="card" style="margin-top:16px;">
-<h3 class="section-title" style="font-size:14pt;">RATING SCALE</h3>
+<h3 class="section-title" style="font-size:14pt;">HOW YOU SCORE YOURSELF</h3>
 <div class="rating-dots">
 <div class="rating-row"><span class="dot">1</span><span class="label">I am not good at this</span></div>
 <div class="rating-row"><span class="dot">2</span><span class="label">I need to be better at this</span></div>
